--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <title>Kaur9094A3</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--   <meta name="viewport" content="width=device-width, initial-scale=1">
+ -->  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />  
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-contnet></app-contnet>
 </body>
 </html>
